[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[project]
name = "dsa"
version = "1.0.0"
description = "Fundamental data structures and algorithms in Python"
readme = "README.md"
authors = [
    { name = "Mykyta Kuzminov", email = "mykytakuzminov@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
    "tox>=4.50.3",
    "tox-uv>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PT", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.14"
ignore_missing_imports = true
mypy_path = "src"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dsa --cov-report=term-missing"
